tests/errors/compiler/dif_types_in_enum/dif_types_in_enum_class_2.c
enum class car : char
{
	a = '1',
	b,
	c = '0'
} tmp;

int main()
{
	enum car i = 5;
	return 0;
}
